添加 结构体 业务的增删改查 及相关数据库初始化文件
